--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - "liveKit-client/**"
       - ".github/workflows/deploy-client.yml"
+  workflow_dispatch:
 
 env:
   NODE_VERSION: "18.x" # set this to the node version to use
