--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -34,7 +34,9 @@ jobs:
         working-directory: ${{ env.DIRECTORY }}
 
       - name: yarn build
-        run: yarn build-only
+        run: |
+          ls -al
+          yarn build-only
         working-directory: ${{ env.DIRECTORY }}
 
       - name: Upload artifact for deployment job
